# easy-ht

./: LICENSE  README.md  setup.cfg
examples/: One Sample Test.ipynb  Two Samples Tests.ipynb
examples/.ipynb_checkpoints/: One Sample Test-checkpoint.ipynb  Two Samples Tests-checkpoint.ipynb
src/easy_ht/: ht.py
src/easy_ht.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/easy_ht2_alod83.egg-info/: PKG-INFO  SOURCES.txt
src/easy_ht_alod83.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
