[metadata]
name = easy-ht
version = 0.0.1
author = Angelica Lo Duca
author_email = angelica.loduca@yahoo.com
description = A Python package for easy Hypothesis Tests 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alod83/easy-ht
project_urls =
    Bug Tracker = https://github.com/alod83/easy-ht/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    statsmodels >=0.10